--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.6.1",
+    "react-simple-image-viewer": "^1.2.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
