--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-website",
   "version": "0.1.0",
+  "homepage": "https://eviemcn.github.io",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
@@ -28,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
+    "gh-pages": "^5.0.0",
     "react-router-dom": "^6.4.3"
   }
 }
