--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-loader-spinner": "^5.3.4",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
